--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
-ipython
-jupyterlab
-matplotlib
-mkdocs
-notebook
-numpy
-pandas
-pip
-pytest
-python-dotenv
-ruff
-scikit-learn
+# Core data processing
+pandas>=2.0.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
+
+# Database and API clients
+supabase>=2.0.0
+requests>=2.31.0
+
+# Development and testing
+pytest>=7.0.0
+ipython>=8.0.0
+jupyterlab>=4.0.0
+notebook>=7.0.0
+
+# Data visualization
+matplotlib>=3.7.0
+
+# Code quality
+ruff>=0.1.0
+
+# Documentation
+mkdocs>=1.5.0
+
+# Machine learning (optional)
+scikit-learn>=1.3.0
+
+# Development setup
+pip>=23.0.0
 -e .
