--- a/.github/workflows/data-processing.yml
+++ b/.github/workflows/data-processing.yml
@@ -68,7 +68,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: 🐍 Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
         cache: 'pip'
@@ -122,3 +122,61 @@ jobs:
         echo "🚀 Starting market data processing..."
         python scripts/process_market_data.py
         echo "✅ Market data processing completed"
+
+  notify-on-failure:
+    runs-on: ubuntu-latest
+    if: always() && contains(needs.*.result, 'failure')
+    needs: [process-bridge-data, process-musd-data, process-market-data]
+    
+    steps:
+    - name: 📱 Discord notification on failure
+      run: |
+        # Determine which jobs failed
+        FAILED_JOBS=""
+        if [[ "${{ needs.process-bridge-data.result }}" == "failure" ]]; then
+          FAILED_JOBS="${FAILED_JOBS}• Bridge Data Processing\n"
+        fi
+        if [[ "${{ needs.process-musd-data.result }}" == "failure" ]]; then
+          FAILED_JOBS="${FAILED_JOBS}• MUSD Data Processing\n"
+        fi
+        if [[ "${{ needs.process-market-data.result }}" == "failure" ]]; then
+          FAILED_JOBS="${FAILED_JOBS}• Market Data Processing\n"
+        fi
+        
+        curl -X POST -H "Content-Type: application/json" \
+        -d '{
+          "embeds": [{
+            "title": "🚨 Data Processing Pipeline Failed",
+            "description": "One or more jobs failed in `${{ github.repository }}`",
+            "color": 15158332,
+            "fields": [
+              {
+                "name": "Failed Jobs",
+                "value": "'"${FAILED_JOBS}"'",
+                "inline": false
+              },
+              {
+                "name": "Workflow",
+                "value": "${{ github.workflow }}",
+                "inline": true
+              },
+              {
+                "name": "Branch",
+                "value": "${{ github.ref_name }}",
+                "inline": true
+              },
+              {
+                "name": "Triggered by",
+                "value": "${{ github.event_name }}",
+                "inline": true
+              },
+              {
+                "name": "View Logs",
+                "value": "[Run #${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})",
+                "inline": false
+              }
+            ],
+            "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"
+          }]
+        }' \
+        ${{ secrets.DISCORD_WEBHOOK }}
