--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,34 @@
 -e .
-ipython>=9.3.0
-jupyterlab>=4.0.0
+
+# Core data processing
+pandas>=2.3.0
+numpy>=2.3.0
+
+# Web3 and blockchain
+web3>=6.0.0
+
+# HTTP requests
+requests>=2.32.4
+
+# Environment management
+python-dotenv>=1.0.0
+
+# Database and API clients
+google-cloud-bigquery>=3.0.0
+google-oauth2-tool>=0.0.3
+supabase>=2.15.3
+pyarrow>=10.0.0
 
 # Data visualization
 matplotlib>=3.7.0
 
-# Documentation
-mkdocs>=1.5.0
+# Jupyter and development
+ipython>=9.3.0
+jupyterlab>=4.0.0
 notebook>=7.0.0
-numpy>=2.3.0
-# Core data processing
-pandas>=2.3.0
-
-# Development setup
-pip>=23.0.0
 
 # Development and testing
 pytest>=8.4.0
-python-dotenv>=1.0.0
-requests>=2.32.4
 
 # Code quality
 ruff>=0.1.0
@@ -26,7 +36,11 @@ ruff>=0.1.0
 # Machine learning (optional)
 scikit-learn>=1.3.0
 
-# Database and API clients
-google-cloud-bigquery>=3.0.0
-pyarrow>=10.0.0
-supabase>=2.15.3
+# Documentation
+mkdocs>=1.5.0
+
+# Development setup
+pip>=23.0.0
+
+# Additional utilities
+decimal
