--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ google-cloud-bigquery>=3.0.0
 google-oauth2-tool>=0.0.3
 supabase>=2.15.3
 pyarrow>=10.0.0
+db-dtypes>=1.4.0
 
 # Data visualization
 matplotlib>=3.7.0
