--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas>=2.3.0
 numpy>=2.3.0
 
 # Web3 and blockchain
-web3>=6.0.0
+web3>=7.0.0
 
 # HTTP requests
 requests>=2.32.4
@@ -14,10 +14,11 @@ requests>=2.32.4
 python-dotenv>=1.0.0
 
 # Database and API clients
-google-cloud-bigquery>=3.0.0
-google-oauth2-tool>=0.0.3
+google-cloud-bigquery>=3.30.0
+google-auth>=2.30.0
+google-api-core>=2.20.0
 supabase>=2.15.3
-pyarrow>=10.0.0
+pyarrow>=20.0.0
 db-dtypes>=1.4.0
 
 # Data visualization
@@ -25,8 +26,9 @@ matplotlib>=3.7.0
 
 # Jupyter and development
 ipython>=9.3.0
-jupyterlab>=4.0.0
+jupyterlab>=4.4.0
 notebook>=7.0.0
+jupyter>=1.1.0
 
 # Development and testing
 pytest>=8.4.0
@@ -43,5 +45,7 @@ mkdocs>=1.5.0
 # Development setup
 pip>=23.0.0
 
-# Additional utilities
-# Note: decimal is a built-in Python module, no need to install
+# Built-in modules (no install needed):
+# - hashlib, json, time, os, sys, subprocess
+# - decimal, datetime, functools, typing, pathlib
+# - traceback
