Made the generate-summary-reports GH actions manual only

--- a/.github/workflows/generate-summary-reports.yml
+++ b/.github/workflows/generate-summary-reports.yml
@@ -1,9 +1,9 @@
 name: Generate Summary Reports
 
 on:
-  schedule:
-    # Generate summary reports daily at 5 AM Eastern (9 AM UTC)
-    - cron: '0 9 * * *'
+  # schedule:
+  #   # Generate summary reports daily at 5 AM Eastern (9 AM UTC)
+  #   - cron: '0 9 * * *'
 
   workflow_dispatch:
     inputs:
