--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ db-dtypes>=1.4.0
 google-api-core>=2.20.0
 google-auth>=2.30.0
 google-cloud-bigquery>=3.30.0
+pandas-gbq>=0.26.1
+gspread>=6.0.0
+oauth2client>=4.1.3
 pyarrow>=20.0.0
 supabase>=2.15.3
 
