--- a/.github/workflows/data-processing.yml
+++ b/.github/workflows/data-processing.yml
@@ -2,8 +2,10 @@ name: Data Processing Pipeline
 
 on:
   schedule:
-    # Run every 6 hours (at 00:00, 06:00, 12:00, 18:00 UTC)
+    # Run every 2 hours (at 00:00, 02:00, 04:00, 06:00, 08:00, 10:00, 12:00, 14:00, 16:00, 18:00, 20:00, 22:00 UTC)
     - cron: '0 */2 * * *'
+    # Run daily at 11:59pm UTC for Discord summary
+    - cron: '59 23 * * *'
 
   workflow_dispatch:
     inputs:
